--- a/WebApiBackEnd/www/index.html
+++ b/WebApiBackEnd/www/index.html
@@ -23,7 +23,7 @@
                     });
                 },
                 onDeviceReady: function () {
-                    $scope.sUrl = "https://mycontacts.apphb.com/contacts";
+                    $scope.sUrl = "https://employeeapplication.apphb.com/Api/Employees";
                     $http.get($scope.sUrl).success($scope.onData);
                 }
             });
